# rag

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASING.md  doc.md  eval_questions_real.json  implementation_plan.md  implementation_plan_local.md  installer.iss  pyproject.toml  qdrant_user_guide.md  rag.spec  sentence_transformers_user_guide.md  watchfiles_user_guide.md
.claude/: settings.json
.github/: CODEOWNERS
docs/: RELEASE_LIFECYCLE.md  backlog-future-releases.md  decisions.md  mcp-audit-v2.1-enhancements.md  workflows.md
researches/: 2026-03-31_python-watchfiles-library.md  2026-03-31_qdrant-vector-database-comprehensive-guide.md  2026-03-31_sentence-transformers-comprehensive-guide.md  index.md
scripts/: build.py  dev.ps1  eval_retrieval.py  launch.vbs  pick_folder.vbs  publish_wiki.ps1  verify_setup.py
tasks/: roadmap_v2.md  wiki_implementation_plan.md
tests/: conftest.py  test_activity.py  test_backup.py  test_chunk_hygiene.py  test_chunking.py  test_code_chunking.py  test_code_indexing.py  test_code_metadata.py  test_codegraph.py  test_config_migration.py  test_coverage_status.py  test_crash_history.py  test_dev_codefirst.py  test_dev_mode.py  test_dev_retrieval.py  test_doctor.py  test_eval.py  test_failsafe_retrieval.py  test_fatal_crash_logging.py  test_feature_intent.py  test_freshness.py  test_generated_exclusion.py  test_ignore.py  test_incremental.py  test_indexing.py  test_integration.py  test_languages.py  test_line_anchors.py  test_map_data.py  test_mcp_ops.py  test_mcp_proxy.py  test_notify.py  test_owner.py  (+22 more)
(+161 files in other folders)
