[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragtools"
version = "2.4.2"
description = "Local Markdown RAG system for Claude CLI"
requires-python = ">=3.10"
dependencies = [
    "qdrant-client>=1.12.0",
    "sentence-transformers>=3.0.0",
    "typer[all]>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-frontmatter>=1.0.0",
    "markdown-it-py>=3.0.0",
    "rich>=13.0.0",
    "mcp>=1.26.0",
    "watchfiles>=1.0.0",
    "pathspec>=0.12.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "pytest-asyncio>=0.23.0"]
build = ["pyinstaller>=6.0.0"]

[project.scripts]
rag = "ragtools.cli:app"
rag-mcp = "ragtools.integration.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ragtools = [
    "service/templates/*.html",
    "service/static/*.css",
    "service/static/*.js",
    "service/static/*.png",
    "service/static/*.ico",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
